--- a/docs/install.txt
+++ b/docs/install.txt
@@ -44,8 +44,8 @@ Create database:
 
 shell> mysql -uroot -p<пароль>
 mysql> CREATE DATABASE netflow CHARACTER SET utf8 COLLATE utf8_bin;
-mysql> CREATE USER 'netflow'@'localhost' IDENTIFIED BY 'password';
-mysql> GRANT ALL PRIVILEGES ON netflow.* TO 'netflow'@'localhost';
+mysql> CREATE USER 'flowtools'@'localhost' IDENTIFIED BY 'password';
+mysql> GRANT ALL PRIVILEGES ON netflow.* TO 'flowtools'@'localhost';
 
 Create tables:
 
